Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-5124

S_IF* constants are not bits

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.6.0
    • Lustre 2.6.0
    • 3
    • 14139

      This is minor. In lod_load_striping_locked() we have tests:

      if (lu_object_attr(lod2lu_obj(lo)) & S_IFREG) {
      ...
      } else if (lu_object_attr(lod2lu_obj(lo)) & S_IFDIR) {
      ...
      

      This is wrong since in general the S_IF* constants are not single bits.

            jhammond John Hammond
            jhammond John Hammond
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: