LU-5124 lod: use S_IS{REG,DIR} in lod_load_striping_locked()

In lod_load_striping_locked() use S_ISREG(mode) rather than testing
(mode & S_IFREG) and similarly for S_ISDIR().

Signed-off-by: John L. Hammond <john.hammond@intel.com>
Change-Id: I040a50b485fc2b45d74daf403c041f05968e573b
Reviewed-on: http://review.whamcloud.com/10702
Tested-by: Jenkins
Tested-by: Maloo <hpdd-maloo@intel.com>
Reviewed-by: Andreas Dilger <andreas.dilger@intel.com>
Reviewed-by: Lai Siyao <lai.siyao@intel.com>