lustre/lod/lod_lov.c
@@ -838,7 +838,7 @@ int lod_load_striping(const struct lu_env *env, struct lod_object *lo)
 		GOTO(out, rc = 0);
 
 	/* only regular files can be striped */
-	if (!(lu_object_attr(lod2lu_obj(lo)) & S_IFREG))
+	if (!S_ISREG(lu_object_attr(lod2lu_obj(lo))))
 		GOTO(out, rc = 0);
 
 	rc = lod_get_lov_ea(env, lo);
